--- a/portfolio.html
+++ b/portfolio.html
@@ -34,28 +34,54 @@
 
 <main>
 <div class="container">
-  <div class="two-thirds">
-        <h1>Portfolio</H1>
-
-          <img id="PortfolioItems" src="#" alt="Skill1">
-          <img id="PortfolioItems" src="#" alt="Skill2">
-          <img id="PortfolioItems" src="#" alt="Skill3">
-          <img id="PortfolioItems" src="#" alt="Skill4">
-          <img id="PortfolioItems" src="#" alt="Skill5">
   
+    <div class="two-thirds">
+      <div class="grayborder">
+        <h1>Portfolio</H1>
+        <hr>
+          <div class="PortfolioContainer">
 
-      </div>    
+            <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Web Design</h3>
+              <img class="PortfolioImage" src="assets/images/webdesign.jpg" alt="Web Design">
+            </div>
+
+              <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Twitter App</h3>
+              <img class="PortfolioImage" src="assets/images/twitterapp.jpg" alt="Twitter App">
+              </div>
+
+              <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Running App</h3>
+              <img class="PortfolioImage" src="assets/images/runningapp.jpg" alt="Running App">
+              </div>
+
+              <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Music Player App</h3>
+              <img class="PortfolioImage" src="assets/images/music-app.jpg" alt="Music Player App">
+              </div>
+
+              <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Gaming App</h3>
+              <img class="PortfolioImage" src="assets/images/gameapp.jpg" alt="Game App">
+              </div>
+
+            </div>
+          </div>
+        </div>
+
       <div class="one-third">
           <h2>Connect with Joe</h2>
+            <hr>
         
                 <a target ="_blank" href="https://github.com/joecabralez">
-                <img id="social" src="assets/images/github.png" alt="Joe's git hub">
+                <img class="social" src="assets/images/github.png" alt="Joe's git hub">
                 </a>
                 <a target ="_blank" href="https://www.linkedin.com/in/joe-cabralez-18b8a463/">
-                <img id="social" src="assets/images/linkedin.png" alt="Joe's Linkedin" >
+                <img class="social" src="assets/images/linkedin.png" alt="Joe's Linkedin" >
                 </a>
                 <a target ="_blank" href="http://stackoverflow.com/users/7508803/joe-cabralez">
-                <img id ="social" src="assets/images/stackoverflow.png" alt="Joe's Stackoverflow">
+                <img class="social" src="assets/images/stackoverflow.png" alt="Joe's Stackoverflow">
                 </a>
           </div>
       </div>
