--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+    <div class="wrapper">
     <header>
       <div class="container">
         <a href="index.html" class="logo">Joe Cabralez</a>
@@ -71,6 +72,7 @@
           </div>
       </div>
     </main>
+  <div>
 
     <footer>
     &copy;Copyright 2017 Joe Cabralez
