--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Joe's Portfolio</title>
-        <meta name="description" content="This is my very first page.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="assets/images/joeappleicon.jpg">
-        <link rel="icon" type="image/jpg" href="assets/images/joefavicon.jpg">
-        <link rel="stylesheet" href="assets/css/normalize.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <title>Joe's Portfolio</title>
+  <meta content="This is my very first page." name="description">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="assets/images/joeappleicon.jpg" rel="apple-touch-icon">
+  <link href="assets/images/joefavicon.jpg" rel="icon" type="image/jpg">
+  <link href="assets/css/normalize.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="wrapper">
     <header>
       <div class="container">
-        <a href="index.html" class="logo">Joe Cabralez</a>
+        <a class="logo" href="index.html">Joe Cabralez</a>
         <nav>
           <ul class="menu">
             <li>
@@ -31,65 +32,36 @@
         <div class="clearfix"></div>
       </div>
     </header>
-
-<main>
-<div class="container">
-  
-    <div class="two-thirds">
-      <div class="grayborder">
-        <h1>Portfolio</H1>
-        <hr>
-          <div class="PortfolioContainer">
-
-            <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Web Design</h3>
-              <img class="PortfolioImage" src="assets/images/webdesign.jpg" alt="Web Design">
-            </div>
-
+    <main>
+      <div class="container">
+        <div class="two-thirds">
+          <div class="grayborder">
+            <h1>Portfolio</h1>
+            <hr>
+            <div class="PortfolioContainer">
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Twitter App</h3>
-              <img class="PortfolioImage" src="assets/images/twitterapp.jpg" alt="Twitter App">
-              </div>
-
+              <h3 class="PortfolioTitles">Web Design</h3><img alt="Web Design" class="PortfolioImage" src="assets/images/webdesign.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Running App</h3>
-              <img class="PortfolioImage" src="assets/images/runningapp.jpg" alt="Running App">
-              </div>
-
+              <h3 class="PortfolioTitles">Twitter App</h3><img alt="Twitter App" class="PortfolioImage" src="assets/images/twitterapp.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Music Player App</h3>
-              <img class="PortfolioImage" src="assets/images/music-app.jpg" alt="Music Player App">
-              </div>
-
+              <h3 class="PortfolioTitles">Running App</h3><img alt="Running App" class="PortfolioImage" src="assets/images/runningapp.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Gaming App</h3>
-              <img class="PortfolioImage" src="assets/images/gameapp.jpg" alt="Game App">
-              </div>
-
+              <h3 class="PortfolioTitles">Music Player App</h3><img alt="Music Player App" class="PortfolioImage" src="assets/images/music-app.jpg"></div>
+              <div class="PortfolioItem">
+              <h3 class="PortfolioTitles">Gaming App</h3><img alt="Game App" class="PortfolioImage" src="assets/images/gameapp.jpg"></div>
             </div>
           </div>
         </div>
-
-      <div class="one-third">
+        <div class="one-third">
           <h2>Connect with Joe</h2>
-            <hr>
-        
-                <a target ="_blank" href="https://github.com/joecabralez">
-                <img class="social" src="assets/images/github.png" alt="Joe's git hub">
-                </a>
-                <a target ="_blank" href="https://www.linkedin.com/in/joe-cabralez-18b8a463/">
-                <img class="social" src="assets/images/linkedin.png" alt="Joe's Linkedin" >
-                </a>
-                <a target ="_blank" href="http://stackoverflow.com/users/7508803/joe-cabralez">
-                <img class="social" src="assets/images/stackoverflow.png" alt="Joe's Stackoverflow">
-                </a>
-          </div>
+          <hr>
+          <a href="https://github.com/joecabralez" target="_blank"><img alt="Joe's git hub" class="social" src="assets/images/github.png"></a> <a href="https://www.linkedin.com/in/joe-cabralez-18b8a463/" target="_blank"><img alt="Joe's Linkedin" class="social" src="assets/images/linkedin.png"></a> <a href="http://stackoverflow.com/users/7508803/joe-cabralez" target="_blank"><img alt="Joe's Stackoverflow" class="social" src="assets/images/stackoverflow.png"></a>
+        </div>
       </div>
     </main>
-
-    <footer>
+  </div>
+  <footer>
     &copy;Copyright 2017 Joe Cabralez
-    </footer>
-
-    </body>
+  </footer>
+</body>
 </html>
