Final (I hope) files

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,15 +40,15 @@
             <hr>
             <div class="PortfolioContainer">
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Web Design</h3><img alt="Web Design" class="PortfolioImage" src="assets/images/webdesign.jpg"></div>
+              <a href="#" target="blank"><h3 class="PortfolioTitles">Web Design</h3></a><img alt="Web Design" class="PortfolioImage" src="assets/images/webdesign.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Twitter App</h3><img alt="Twitter App" class="PortfolioImage" src="assets/images/twitterapp.jpg"></div>
+              <a href="#" target="blank"><h3 class="PortfolioTitles">Twitter App</h3></a><img alt="Twitter App" class="PortfolioImage" src="assets/images/twitterapp.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Running App</h3><img alt="Running App" class="PortfolioImage" src="assets/images/runningapp.jpg"></div>
+              <a href="#" target="blank"><h3 class="PortfolioTitles">Running App</h3></a><img alt="Running App" class="PortfolioImage" src="assets/images/runningapp.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Music Player App</h3><img alt="Music Player App" class="PortfolioImage" src="assets/images/music-app.jpg"></div>
+              <a href="#" target="blank"><h3 class="PortfolioTitles">Music Player App</h3></a><img alt="Music Player App" class="PortfolioImage" src="assets/images/music-app.jpg"></div>
               <div class="PortfolioItem">
-              <h3 class="PortfolioTitles">Gaming App</h3><img alt="Game App" class="PortfolioImage" src="assets/images/gameapp.jpg"></div>
+              <a href="#" target="blank"><h3 class="PortfolioTitles">Gaming App</h3></a><img alt="Game App" class="PortfolioImage" src="assets/images/gameapp.jpg"></div>
             </div>
           </div>
         </div>
