--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Joe's Portfolio</title>
-        <meta name="description" content="This is my very first page.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="assets/images/joeappleicon.jpg">
-        <link rel="icon" type="image/jpg" href="assets/images/joefavicon.jpg">
-        <link rel="stylesheet" href="assets/css/normalize.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-    </head>
-    <body>
-    <div class="wrapper">
+<head>
+  <meta charset="utf-8">
+  <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+  <title>Joe's Portfolio</title>
+  <meta content="This is my very first page." name="description">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
+  <link href="assets/images/joeappleicon.jpg" rel="apple-touch-icon">
+  <link href="assets/images/joefavicon.jpg" rel="icon" type="image/jpg">
+  <link href="assets/css/normalize.min.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="wrapper">
     <header>
       <div class="container">
-        <a href="index.html" class="logo">Joe Cabralez</a>
+        <a class="logo" href="index.html">Joe Cabralez</a>
         <nav>
           <ul class="menu">
             <li>
@@ -32,51 +32,34 @@
         <div class="clearfix"></div>
       </div>
     </header>
-
-<main>
-<div class="container">
-  <div class="two-thirds">
-      <div class="grayborder">
-        <h1>Contact</H1>
-        <hr>
-      <form action="#">
-      <p class="nameform">
-      Name<br>
-      <input type="text" name="firstname" value="John Smith">
-      </p>
-      <p class="emailform">
-      Email<br>
-      <input type="text" name="lastname" value="example@email.com">
-      </p>
-      <p class="messageform">
-      Message<br>
-      <textarea name="message" rows="10" cols="30">What's up?</textarea>
-      </p>
-      <input type="submit" value="Submit">
-      </form> 
-     </div> 		
-	</div>
-    	
-    	 <div class="one-third">
-          <h2>Connect with Joe</h2>
+    <main>
+      <div class="container">
+        <div class="two-thirds">
+          <div class="grayborder">
+            <h1>Contact</h1>
             <hr>
-                <a target ="_blank" href="https://github.com/joecabralez">
-                <img class="social" src="assets/images/github.png" alt="Joe's git hub">
-                </a>
-                <a target ="_blank" href="https://www.linkedin.com/in/joe-cabralez-18b8a463/">
-                <img class="social" src="assets/images/linkedin.png" alt="Joe's Linkedin" >
-                </a>
-                <a target ="_blank" href="http://stackoverflow.com/users/7508803/joe-cabralez">
-                <img class="social" src="assets/images/stackoverflow.png" alt="Joe's Stackoverflow">
-                </a>
+            <form action="#">
+              <p class="nameform">Name<br>
+              <input name="firstname" type="text" value="John Smith"></p>
+              <p class="emailform">Email<br>
+              <input name="lastname" type="text" value="example@email.com"></p>
+              <p class="messageform">Message<br>
+              <textarea cols="30" name="message" rows="10">What's up?</textarea></p><input class="submit" type="submit" value="Submit">
+            </form>
           </div>
+        </div>
+        <div class="one-third">
+          <h2>Connect with Joe</h2>
+          <hr>
+          <a href="https://github.com/joecabralez" target="_blank"><img alt="Joe's git hub" class="social" src="assets/images/github.png"></a> <a href="https://www.linkedin.com/in/joe-cabralez-18b8a463/" target="_blank"><img alt="Joe's Linkedin" class="social" src="assets/images/linkedin.png"></a> <a href="http://stackoverflow.com/users/7508803/joe-cabralez" target="_blank"><img alt="Joe's Stackoverflow" class="social" src="assets/images/stackoverflow.png"></a>
+        </div>
       </div>
     </main>
-  <div>
-
-    <footer>
-    &copy;Copyright 2017 Joe Cabralez
-    </footer>
-
-    </body>
+    <div>
+      <footer>
+        &copy;Copyright 2017 Joe Cabralez
+      </footer>
+    </div>
+  </div>
+</body>
 </html>
